@@ -1,3 +1,8 @@
+2007-12-18  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.04)
+
+	* POSIX.xs: Make split // use RXf_NULL
+	* t/split-null.t: This test now works since it uses pp_split
+
 2007-07-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.03)
 
 	* POSIX.pm: Updated various stuff in the docs
